--- a/Tugas_3.html
+++ b/Tugas_3.html
@@ -18,6 +18,10 @@
             display: block;
             margin: auto;
         }
+
+        .yt-glider {
+            padding: 5%;
+        }
     </style>
 <head>
     <meta charset="UTF-8">
@@ -78,32 +82,9 @@
         <!-- hidffhi -->
         Dengan begitu, sugar glider bisa tumbuh dengan baik dan sehat.</p>
 </body>
-</html>
-
 
 <p><b>Daftar Harga / Price List Sugar Glider</b></p>
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mengenal Tabel HTML</title>
-    <style>
-        table {
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid rgb(7, 7, 7);
-        }
-        th, td {
-            padding: 10px;
-        }
-        th {
-            background-color: #ddda33;
-            color: rgb(0, 0, 0);
-        }
-    </style>
-</head>
 <body>
     <table>
         <tr>
@@ -182,7 +163,10 @@
 
          </form> 
          </div> 
-  
+
+                 <div class="yt-glider">
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/NFdxtJ7NsgE?si=8kcmTFQhjrMxoIGF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         </div>
  </body> 
  </html>
 
