--- a/Css2.html
+++ b/Css2.html
@@ -3,8 +3,8 @@
    <head> 
      <meta charset="UTF-8" /> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-     <title>Document</title> 
-     <link rel="stylesheet" href="style.css" /> 
+     <title>Sugar Glider</title> 
+     <link rel="stylesheet" href="css2.css" /> 
      <link rel="icon" type="image/x-icon" href="favicon (1).ico"/link> 
      <link 
        rel="stylesheet" 
