--- a/Css2.html
+++ b/Css2.html
@@ -32,17 +32,7 @@
          <p class="penulis">ditulis oleh <a href="#">Kelompok 4</a></p> 
   
          <p> 
-           Pengembangan web adalah istilah yang luas untuk pekerjaan yang 
-           terlibat dalam mengembangkan suatu situs web untuk internet (World 
-           Wide Web) atau intranet (jaringan pribadi). Hal ini dapat mencakup 
-           desain web, pengembangan konten web, penghubung klien, sisi 
-           klien/server-side scripting, web server dan keamanan jaringan 
-           konfigurasi, dan e-commerce pembangunan. Namun, kalangan profesional 
-           web, “pengembangan web” biasanya merujuk pada aspek non-desain utama 
-           dari membangun situs web: menulis markup dan coding . Pengembangan web 
-           dapat berkisar dari mengembangkan halaman statis sederhana tunggal 
-           teks biasa ke berbasis web yang paling kompleks aplikasi internet, 
-           bisnis elektronik, atau layanan jaringan sosial. 
+           Tes123
          </p> 
   
          <p> 
