--- a/Css2.html
+++ b/Css2.html
@@ -28,8 +28,8 @@
        </div> 
        <div class="hero"></div> 
        <div class="content"> 
-         <h2>Pengembangan Web</h2> 
-         <p class="penulis">ditulis oleh <a href="#">Kelompok 4</a></p> 
+         <h2>Sugar Glider</h2> 
+         <p class="penulis">Macam-Macam<a href="#">Sugar Glider</a></p> 
   
          <p> 
            Tes123
