--- a/Css2.html
+++ b/Css2.html
@@ -29,24 +29,25 @@
        <div class="hero"></div> 
        <div class="content"> 
          <h2>Sugar Glider</h2> 
-         <p class="penulis">Macam-Macam<a href="#">Sugar Glider</a></p> 
+         <p class="penulis">Macam-Macam <a href="#">Sugar Glider</a></p> 
   
          <p> 
-           Tes123
+          Sugar Glider (Petaurus Breviceps) adalah salah satu binatang pengerat yang berasal dari negara kita, 
+          yaitu Indonesia atau lebih tepatnya di Papua. Dia termasuk keluarga mamalia kecil, spesies omnivora kelas marsupial yang nokturnal. 
+          Artinya hewan ini berkembang biak dengan cara melahirkan dan memiliki ciri-ciri tubuh kecil dan berkantong seperti kangguru serta bersifat nokturnal (aktif di malam hari).
+          Ukuran tubuh sugar glider hampir mirip seperti hamster, yaitu sekita 24-40 cm, dengan berat 4-7 ons. 
+          Selain tubuhnya yang kecil dan manis, sugar glider juga memiliki karakter dan watak yang unik, lucu, pintar serta menggemaskan. 
+          Maka wajar saja jika hewan ini banyak dipelihara baik oleh masyarakat Indonseia sendiri atau di belahan dunia lainnya.
          </p> 
-  
          <p> 
-           Untuk organisasi yang lebih besar dan bisnis, tim pengembangan web 
-           dapat terdiri dari ratusan orang (web developer). Organisasi yang 
-           lebih kecil mungkin hanya memerlukan permanen atau kontrak tunggal 
-           webmaster, atau tugas sekunder untuk posisi pekerjaan yang terkait 
-           seperti desainer grafis dan/atau sistem informasi teknisi. 
-           Pengembangan web mungkin merupakan upaya kolaborasi antar departemen 
-           bukan domain dari sebuah departemen yang ditunjuk. 
+           Mengapa hewan ini dipanggil sugar glider?
+          Dinamakan sugar glider karena dia manis dan bisa terbang, jika kita pisahkan maka artinya menjadi (sugar) "gula" dan gula memiliki sifat manis, kemudian (glider) bermakna "terbang". 
+          Sehingga apabila disatukan "sugar glider" menjadi (si manis yang bisa terbang).
          </p> 
+        
        </div> 
        <div class="tabelheading"> 
-         <h2>Jenis-Jenis Pengembangan Web</h2> 
+         <h2>Jenis-Jenis Sugar Glider</h2> 
          <table border="1" class="tabeljenis"> 
            <tr> 
              <th>No</th> 
