--- a/Css2.html
+++ b/Css2.html
@@ -94,7 +94,7 @@
        <div class="footer"> 
          <p> 
            <i class="far besar fa-copyright"></i> 
-           Kelompok 4 
+           Gladiator Glaider
          </p> 
        </div> 
      </div> 
