--- a/Css2.html
+++ b/Css2.html
@@ -17,7 +17,7 @@
    <body> 
      <div class="container"> 
        <div class="header"> 
-         <h1 class="judul">MyWebsite</h1> 
+         <h1 class="judul">Gladiator Glider</h1> 
          <ul> 
            <li><a href="#">home</a></li> 
            <li><a href="#">about</a></li> 
