--- a/Css2.html
+++ b/Css2.html
@@ -56,11 +56,14 @@
            </tr> 
            <tr> 
              <td>1</td> 
-             <td>Front-end development</td> 
+             <td>Sugar Glider Classic Grey</td> 
              <td> 
-               Tugas utama para developer yang berkecimpung di bidang ini adalah 
-               membangun UI yang dapat membantu pengguna untuk mencapai tujuan 
-               mereka di dalam situs. 
+              Jenis sugar glider termahal disebut juga dengan Classic Grey. 
+              Jenis sugar glider grey ini adalah salah satu jenis sugar glider yang paling banyak ditemui di pasaran dan paling populer. 
+              Harga rata-ratanya sekitar Rp 4,5 juta hingga Rp 9 juta.
+              Dibandingkan jenis-jenis sugar glider lainnya, sugar glider jenis ini tergolong sangat murah dan jinak. Wupih sirsik ini memiliki warna abu-abu.
+              Garis punggungnya hitam, sedangkan perut bawahnya berwarna putih.
+              Meski terbilang standar, banyak yang memfavoritkan hewan ini, sebab warna tubuhnya begitu mencolok dan manis.
              </td> 
            </tr> 
            <tr> 
