--- a/Css2.html
+++ b/Css2.html
@@ -20,9 +20,7 @@
          <h1 class="judul">Gladiator Glider</h1> 
          <ul> 
            <li><a href="#">home</a></li> 
-           <li><a href="#">about</a></li> 
-           <li><a href="#">product</a></li> 
-           <li><a href="#">services</a></li> 
+           <li><a href="#">about</a></li>
            <li><a href="#">contact</a></li> 
          </ul> 
        </div> 
@@ -60,7 +58,6 @@
              <td> 
               Jenis sugar glider termahal disebut juga dengan Classic Grey. 
               Jenis sugar glider grey ini adalah salah satu jenis sugar glider yang paling banyak ditemui di pasaran dan paling populer. 
-              Harga rata-ratanya sekitar Rp 4,5 juta hingga Rp 9 juta.
               Dibandingkan jenis-jenis sugar glider lainnya, sugar glider jenis ini tergolong sangat murah dan jinak. Wupih sirsik ini memiliki warna abu-abu.
               Garis punggungnya hitam, sedangkan perut bawahnya berwarna putih.
               Meski terbilang standar, banyak yang memfavoritkan hewan ini, sebab warna tubuhnya begitu mencolok dan manis.
@@ -68,28 +65,27 @@
            </tr> 
            <tr> 
              <td>2</td> 
-             <td>Back-end development</td> 
+             <td>Sugar Glider Albino</td> 
              <td> 
-               Back-end developer bertugas untuk mengelola server situs web, 
-               program, dan software, dengan tujuan agar semua fitur tersebut 
-               dapat bekerja dengan baik. 
+              Sugar glider albino merupakan jenis sugar glider termahal yang memiliki kelainan pada pigmen sehingga mengakibatkan sekujur tubuhnya berwarna putih layaknya sugar glider leucistic. 
+              Pembeda kedua jenis sugar glider ini adalah pada bagian bola matanya. Sugar glider albino memiliki bola mata berwarna kemerahan akibat kelainan pigmen yang ia miliki.
+              Kondisi pigmen ini bisa dibilang cukup langka sehingga tak heran jika harga dari jenis sugar glider satu ini bisa dibanderol dengan harga diatas sepuluh juta rupiah.
              </td> 
            </tr> 
            <tr> 
              <td>3</td> 
-             <td>Full-stack development</td> 
+             <td>Sugar Glider Black Beauty</td> 
              <td> 
-               Full-stack developer bekerja di sisi front-end dan back-end situs. 
-               Mereka diharapkan dapat membuat situs web, aplikasi, atau program 
-               software dari awal hingga akhir proses pembangunan. 
+              Sesuai dengan namanya, jenis sugar glider termahal selanjutnya ini memiliki warna yang lebih gelap di antara jenis-jenis sugar glider sebelumnya. 
+              Selain itu, terdapat pula jenis lainnya yakni Black Beauty Black Face, dimana wajah sugar glider memiliki corak jauh lebih gelap dengan warna hidung merah muda yang kontras.
              </td> 
            </tr> 
            <tr> 
              <td>4</td> 
-             <td>Mobile development</td> 
+             <td>Black Face Black Beauty</td> 
              <td> 
-               Tugas mobile developer adalah membangun aplikasi yang ramah untuk 
-               perangkat seluler seperti smartphone atau tablet. 
+               Black Face Black Beauty tidak kalah lucu. Sesuai namanya, black beauty yang satu ini memiliki wajah yang hitam. 
+              Lingkar matanya kecil, sementara warna di area hidungnya mencolok. Tentunya sangat imut
              </td> 
            </tr> 
          </table> 
